Qt Service: Fix compilation with Qt 5 with define QTSERVICE_DEBUG.

Use Qt 5's new message handler within #ifdef and rewrite
code use QByteArray instead of using toAscii(), which no
longer exists in Qt 5.

Change-Id: Iad6aa794c6578fd796e3b2bb402d3e290bdc711f
Task-number: QTSOLBUG-184
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>